refactor(parser-jvm-core): use lifecycle in backbone plugin