@@ -2,15 +2,12 @@ package dev.hilla.parser.plugins.backbone;
 
 import static io.swagger.v3.oas.models.Components.COMPONENTS_SCHEMAS_REF;
 
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Objects;
+import java.util.List;
 
-import dev.hilla.parser.models.ArraySignatureModel;
 import dev.hilla.parser.models.ClassRefSignatureModel;
 import dev.hilla.parser.models.SignatureModel;
-import dev.hilla.parser.models.TypeArgumentModel;
-import dev.hilla.parser.models.TypeParameterModel;
-import dev.hilla.parser.models.TypeVariableModel;
 
 import io.swagger.v3.oas.models.media.ArraySchema;
 import io.swagger.v3.oas.models.media.BooleanSchema;
@@ -25,17 +22,14 @@ import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.media.StringSchema;
 
 final class SchemaProcessor {
-    private static final Schema<?> anySchemaSample = new ObjectSchema();
-    private final Context context;
     private final SignatureModel signature;
 
-    public SchemaProcessor(SignatureModel signature, Context context) {
+    public SchemaProcessor(SignatureModel signature) {
         this.signature = signature;
-        this.context = context;
     }
 
     private static <T extends Schema<?>> T nullify(T schema,
-            boolean condition) {
+        boolean condition) {
         return (T) schema.nullable(condition ? true : null);
     }
 
@@ -56,25 +50,15 @@ final class SchemaProcessor {
             result = iterableSchema();
         } else if (signature.isMap()) {
             result = mapSchema();
-        } else if (signature.isOptional()) {
-            result = optionalSchema();
-        } else if (signature.isTypeArgument()) {
-            result = typeArgumentSchema();
-        } else if (signature.isTypeParameter()) {
-            result = typeParameterSchema();
         } else if (signature.isDate()) {
             result = dateSchema();
         } else if (signature.isDateTime()) {
             result = dateTimeSchema();
         } else if (signature.isClassRef()) {
             result = refSchema();
-        } else if (signature.isTypeVariable()) {
-            result = typeVariableSchema();
         } else {
             result = anySchema();
         }
-
-        context.getAssociationMap().addSignature(signature, result);
 
         return result;
     }
@@ -84,10 +68,7 @@ final class SchemaProcessor {
     }
 
     private Schema<?> arraySchema() {
-        var nestedType = ((ArraySignatureModel) signature).getNestedType();
-        var items = new SchemaProcessor(nestedType, context).process();
-
-        return nullify(new ArraySchema().items(items), true);
+        return nullify(new ArraySchema(), true);
     }
 
     private Schema<?> booleanSchema() {
@@ -103,50 +84,21 @@ final class SchemaProcessor {
     }
 
     private Schema<?> integerSchema() {
-        return nullify(new IntegerSchema(), !signature.isPrimitive())
-                .format(signature.isLong() ? "int64" : "int32");
+        return nullify(new IntegerSchema(), !signature.isPrimitive()).format(
+            signature.isLong() ? "int64" : "int32");
     }
 
     private Schema<?> iterableSchema() {
-        var schema = nullify(new ArraySchema(), true);
-        var typeArguments = ((ClassRefSignatureModel) signature)
-                .getTypeArguments();
-
-        if (typeArguments.size() > 0) {
-            return schema
-                    .items(new SchemaProcessor(typeArguments.get(0), context)
-                            .process());
-        }
-
-        return schema;
+        return nullify(new ArraySchema(), true);
     }
 
     private Schema<?> mapSchema() {
-        var _type = (ClassRefSignatureModel) signature;
-        var typeArguments = _type.getTypeArguments();
-        var values = new SchemaProcessor(typeArguments.get(1), context)
-                .process();
-
-        var schema = nullify(new MapSchema(), true)
-                .additionalProperties(values);
-
-        if (signature.isNonJDKClass()) {
-            schema.addExtension("x-classname", _type.getName());
-        }
-
-        return schema;
+        return nullify(new MapSchema(), true);
     }
 
     private Schema<?> numberSchema() {
-        return nullify(new NumberSchema(), !signature.isPrimitive())
-                .format(signature.isFloat() ? "float" : "double");
-    }
-
-    private Schema<?> optionalSchema() {
-        var typeArguments = ((ClassRefSignatureModel) signature)
-                .getTypeArguments();
-
-        return new SchemaProcessor(typeArguments.get(0), context).process();
+        return nullify(new NumberSchema(), !signature.isPrimitive()).format(
+            signature.isFloat() ? "float" : "double");
     }
 
     private Schema<?> refSchema() {
@@ -155,37 +107,13 @@ final class SchemaProcessor {
         }
 
         var cls = ((ClassRefSignatureModel) signature).getClassInfo();
-        context.getDependencies().add(cls);
 
-        return nullify(new ComposedSchema(), true)
-                .anyOf(Collections.singletonList(new Schema<>()
-                        .$ref(COMPONENTS_SCHEMAS_REF + cls.getName())));
+        return nullify(new ComposedSchema(), true).anyOf(new ArrayList<>(
+            List.of(
+                new Schema<>().$ref(COMPONENTS_SCHEMAS_REF + cls.getName()))));
     }
 
     private Schema<?> stringSchema() {
         return nullify(new StringSchema(), !signature.isPrimitive());
-    }
-
-    private Schema<?> typeArgumentSchema() {
-        var types = ((TypeArgumentModel) signature).getAssociatedTypes();
-
-        return types.size() > 0
-                ? new SchemaProcessor(types.get(0), context).process()
-                : anySchema();
-    }
-
-    private Schema<?> typeParameterSchema() {
-        return ((TypeParameterModel) signature).getBounds().stream()
-                .filter(Objects::nonNull)
-                .filter(bound -> !bound.isNativeObject())
-                .<Schema<?>> map(
-                        bound -> new SchemaProcessor(bound, context).process())
-                .filter(schema -> !Objects.equals(schema, anySchemaSample))
-                .findFirst().orElseGet(this::anySchema);
-    }
-
-    private Schema<?> typeVariableSchema() {
-        return new SchemaProcessor(((TypeVariableModel) signature).resolve(),
-                context).process();
     }
 }
